# ros2-learning

./: .gitignore
ros2/: 01编写你的第一个节点.md  03ROS2与C++的类和继承.md  04C++新特性.md
ros2/.claude/: settings.local.json
ros2/02/: 02使用功能包组织C++节点.md  05多线程与回调函数.md  CMakeCache.txt  CMakeListsni.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  ros2_cpp_node  ros2_cpp_node.cpp
ros2/02/.obsidian/: workspace.json
ros2/02/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ros2/02/demo_cpp_pkg/: CMakeLists.txt  package.xml
ros2/02/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto.cpp  learn_lambda.cpp  learn_shared.cpp  learn_thread.cpp  person_node.cpp
ros2_chapt3/: 01话题的发布.md  02话题的订阅.md  03自定义消息接口.md  04系统消息的获取与发布.md  05在功能包中使用QT.md  05订阅数据并用QT显示.md  AGENTS.md  c++的类和方法.md
ros2_chapt3/topic_pra_ws/.claude/: settings.local.json
ros2_chapt3/topic_pra_ws/.obsidian/: workspace.json
ros2_chapt3/topic_pra_ws/src/status_display/: CMakeLists.txt  package.xml
ros2_chapt3/topic_pra_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
ros2_chapt3/topic_pra_ws/src/status_interface/: CMakeLists.txt  package.xml
ros2_chapt3/topic_pra_ws/src/status_publihser/: CMakeLists.txt  package.xml
ros2_chapt3/topic_ws/install/: local_setup.sh  setup.sh
ros2_chapt3/topic_ws/log/: latest_build  latest_list
ros2_chapt3/topic_ws/src/cpp_topic_pkg/: CMakeLists.txt  package.xml
ros2_chapt3/topic_ws/src/status_display/: CMakeLists.txt
ros2_chapt4/chapt4_ws/: 01自定义服务接口.md  02cpp人脸检测.md  03人脸检测服务端.md
ros2_chapt4/chapt4_ws/src/chapt4_interface/: CMakeLists.txt  package.xml
ros2_chapt4/chapt4_ws/src/demo_cpp_service/: 04人脸检测客户端.md  CMakeLists.txt  package.xml
ros2_chapt4/chapt4_ws/src/demo_cpp_service/src/: demo_cpp_service.cpp  face_detect_client.cpp  face_detect_server.cpp
(+10 files in other folders)
